# fusio

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: monoio.rs  tokio.rs
benches/parquet/: common.rs  monoio.rs  opendal.rs  parquet.rs  tokio.rs
docs/: DURABILITY.md  durability.md  fusio-log-v2.md  fusio-manifest-rfd.md
docs/rfcs/: 0001-fusio-manifest-rfd.md
examples/: Cargo.toml  README.md
examples/opfs/: .gitignore  Cargo.toml  index.js  webpack.config.js
examples/opfs/src/: lib.rs
examples/src/: fs.rs  lib.rs  multi_runtime.rs  object.rs  opendal.rs  s3.rs
fusio/: Cargo.toml
fusio-core/: Cargo.toml
fusio-core/src/: durability.rs  error.rs  lib.rs  maybe.rs
fusio-core/src/buf/: mod.rs  slice.rs
fusio-core/src/dynamic/: error.rs  mod.rs
fusio-dispatch/: Cargo.toml
fusio-dispatch/src/: lib.rs
fusio-log/: Cargo.toml  README.md
fusio-log/src/: error.rs  lib.rs  log.rs  option.rs
fusio-log/src/fs/: hash.rs  mod.rs
fusio-log/src/serdes/: arc.rs  boolean.rs  bytes.rs  list.rs  mod.rs  num.rs  option.rs  string.rs
fusio-manifest/: CLAUDE.md  Cargo.toml
fusio-manifest/examples/: README.md  manifest_step3_s3.rs  step1_basic.rs  step2_leases.rs  step3_remote_compactor.rs  step4_lease_keeper.rs
fusio-manifest/src/: backoff.rs  cache.rs  checkpoint.rs  compactor.rs  context.rs  db.rs  gc.rs  head.rs  lease.rs  lib.rs  manifest.rs  options.rs  retention.rs  s3.rs  segment.rs  session.rs  snapshot.rs  store.rs  test_utils.rs  testing.rs  types.rs
fusio-manifest/src/impls/: mod.rs
fusio-manifest/src/impls/fs/: checkpoint.rs  gc_plan.rs  head.rs  lease.rs  mod.rs  segment.rs
fusio-manifest/src/impls/mem/: checkpoint.rs  gc_plan.rs  head.rs  lease.rs  mod.rs  segment.rs
fusio-manifest/src/impls/s3/: checkpoint.rs  gc_plan.rs  head.rs  lease.rs  mod.rs  segment.rs
fusio-manifest/src/lease/: keeper.rs  mod.rs
fusio-manifest/tests/: e2e_serializable_isolation.rs  s3_blackbox.rs  s3_gc_plan.rs  wasm.rs
fusio-object-store/: Cargo.toml
fusio-object-store/src/: fs.rs  lib.rs
fusio-opendal/: Cargo.toml  README.md
fusio-opendal/src/: file.rs  fs.rs  lib.rs  utils.rs
fusio-parquet/: Cargo.toml
fusio-parquet/src/: lib.rs  reader.rs  writer.rs
fusio-parquet/tests/: opfs.rs  wasm.rs  web_executor_wasm.rs
fusio/benches/: tokio.rs
fusio/src/: buf.rs  durability.rs  dynamic.rs  error.rs  fs.rs  lib.rs  options.rs  parse.rs
fusio/src/buf/: mod.rs  slice.rs
fusio/src/dynamic/: buf.rs  fs.rs  mod.rs
fusio/src/executor/: mod.rs  monoio.rs  opfs.rs  tokio.rs  web.rs
fusio/src/fs/: mod.rs  options.rs
fusio/src/impls/: buffered.rs  mod.rs
fusio/src/impls/disk/: mod.rs
fusio/src/impls/disk/asyncfs/: fs.rs  mod.rs
fusio/src/impls/disk/monoio/: fs.rs  mod.rs
fusio/src/impls/disk/opfs/: fs.rs  mod.rs
fusio/src/impls/disk/opfs/sync/: mod.rs
fusio/src/impls/disk/tokio/: fs.rs  mod.rs
fusio/src/impls/disk/tokio_uring/: fs.rs  mod.rs
fusio/src/impls/mem/: fs.rs  mod.rs
fusio/src/impls/remotes/: mod.rs  serde.rs
fusio/src/impls/remotes/aws/: credential.rs  error.rs  fs.rs  head.rs  mod.rs  multipart_upload.rs  options.rs  s3.rs  sign.rs  writer.rs
fusio/src/impls/remotes/http/: error.rs  mod.rs  monoio.rs  tokio.rs  wasm.rs
fusio/src/impls/remotes/object_store/: fs.rs  mod.rs
fusio/src/local/: mod.rs
fusio/src/local/monoio/: fs.rs  mod.rs
fusio/src/local/tokio/: fs.rs  mod.rs
fusio/src/local/tokio_uring/: fs.rs  mod.rs
fusio/src/path/: mod.rs  parts.rs
fusio/src/remotes/: http.rs  mod.rs
fusio/src/remotes/aws/: credential.rs  fs.rs  mod.rs  s3.rs  sign.rs
fusio/src/remotes/http/: mod.rs  tokio.rs
fusio/src/remotes/object_store/: fs.rs  mod.rs
fusio/tests/: durability.rs  executor_web.rs  opfs.rs  wasm_http.rs  worker_scope_shim.js
parquet/: Cargo.toml
src/: buf.rs  dynamic.rs  fs.rs  lib.rs  object.rs
src/local/: mod.rs
src/local/monoio/: fs.rs  mod.rs
src/local/tokio/: fs.rs
src/local/tokio_uring/: fs.rs  mod.rs
src/locals/: mod.rs  monoio.rs  tokio.rs  tokio_uring.rs
src/remotes/aws/: credential.rs
