[workspace]
members = [
    "examples",
    "examples/opfs",
    "fusio",
    "fusio-core",
    "fusio-dispatch",
    "fusio-log",
    "fusio-object-store",
    "fusio-opendal",
    "fusio-parquet",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tonbo-io/fusio"
version = "0.4.0"

[workspace.dependencies]
bytes = { version = "1.7" }
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
parquet = { version = "55.1.0", default-features = false }

[profile.bench]
codegen-units = 1
lto = "thin"
debug = true
