[workspace]
members = [
    "examples",
    "examples/opfs",
    "fusio",
    "fusio-core",
    "fusio-object-store",
    "fusio-opendal",
    "fusio-parquet",
    "fusio-manifest",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tonbo-io/fusio"
version = "0.4.1"

[workspace.dependencies]
bytes = { version = "1.7" }
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
parquet = { version = "56", default-features = false }
arrow = { version = "56" }

[profile.bench]
codegen-units = 1
lto = "thin"
debug = true
