[package]
edition.workspace = true
license.workspace = true
name = "examples"
repository.workspace = true
version = "0.1.0"

[features]
default = ["fusio/aws", "tokio"]
monoio = ["dep:monoio", "fusio/monoio"]
tokio = ["dep:tokio", "fusio/tokio"]

[dependencies]
fusio = { path = "../fusio" }
fusio-opendal = { path = "../fusio-opendal" }
futures-util = "0.3"
monoio = { version = "0.2", optional = true }
opendal = { version = "0.50.1", default-features = false, features = [
    "services-memory",
] }
tokio = { version = "1.0", features = ["full"], optional = true }
