[package]
edition.workspace = true
license.workspace = true
name = "examples"
repository.workspace = true
version = "0.1.0"

[features]
default = ["fusio/aws", "tokio"]
monoio = ["dep:monoio", "fusio/monoio"]
tokio = ["dep:tokio", "fusio/tokio"]

[dependencies]
fusio = { workspace = true, features = ["dyn", "executor", "fs"] }
fusio-opendal = { workspace = true }
futures-util = { workspace = true }
monoio = { workspace = true, optional = true }
opendal = { workspace = true, features = [
    "services-memory",
] }
tokio = { workspace = true, features = ["full"], optional = true }
