[package]
description = "Provides core trait for Fusio library."
edition.workspace = true
license.workspace = true
name = "fusio-core"
repository.workspace = true
version.workspace = true

[features]
alloc = []
bytes = ["dep:bytes"]
completion-based = []
default = ["alloc", "bytes", "std"]
no-send = []
std = []

[dependencies]
bytes = { version = "1", optional = true, default-features = false }
thiserror = { version = "2", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
