[package]
description = "Provides core trait for Fusio library."
edition.workspace = true
license.workspace = true
name = "fusio-core"
readme = "../README.md"
repository.workspace = true
version.workspace = true

[features]
alloc = []
bytes = ["dep:bytes"]
completion-based = []
default = ["alloc", "bytes", "std"]
no-send = []
std = []

[dependencies]
bytes = { workspace = true, optional = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
