[package]
edition.workspace = true
license.workspace = true
name = "fusio-dispatch"
repository.workspace = true
version = "0.2.0"

[features]
aws = ["fusio/aws"]
default = []
monoio = ["fusio/monoio"]
object_store = ["dep:fusio-object-store", "object_store/aws"]
tokio = ["fusio/tokio"]

[dependencies]
fusio = { version = "0.2.0", path = "../fusio" }
fusio-object-store = { version = "0.2.0", path = "../fusio-object-store", optional = true }
object_store = { version = "0.11", optional = true }
