[package]
description = "Provides a dispatcher for Fusio file system."
edition.workspace = true
license.workspace = true
name = "fusio-dispatch"
repository.workspace = true
version.workspace = true

[features]
aws = ["fusio/aws"]
default = []
monoio = ["fusio/monoio"]
object_store = ["dep:fusio-object-store", "object_store/aws"]
opfs = ["fusio/opfs"]
tokio = ["fusio/tokio"]

[dependencies]
fusio = { version = "0.4.1", path = "../fusio" }
fusio-object-store = { version = "0.4.1", path = "../fusio-object-store", optional = true }
object_store = { version = "0.12", optional = true }
