[package]
description = "The append only log implementations."
edition.workspace = true
license.workspace = true
name = "fusio-log"
repository.workspace = true
version.workspace = true

[features]
aws = ["fusio-dispatch/aws", "fusio/aws"]
bytes = ["dep:bytes"]
default = ["aws", "bytes", "tokio", "tokio-http"]
monoio = ["fusio-dispatch/monoio", "fusio/monoio"]
monoio-http = ["fusio/monoio-http"]
tokio = [
    "fusio-dispatch/tokio",
    "fusio/tokio",
]
tokio-http = ["fusio/tokio-http"]
web = ["fusio-dispatch/opfs", "fusio/opfs"]
web-http = ["fusio/wasm-http"]

[dependencies]
bytes = { workspace = true, optional = true }
crc32fast = "1"
fusio = { version = "0.3.8", path = "../fusio", features = [
    "dyn",
    "fs",
    "bytes",
] }
fusio-dispatch = { version = "0.3.8", path = "../fusio-dispatch" }
futures-core = { workspace = true }
futures-util = { workspace = true }
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
monoio = { version = "0.2", features = ["sync"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-test = "0.3.49"
