[package]
description = "Backend-agnostic, append-only manifest/WAL for Fusio (RFC-0001)."
edition.workspace = true
license.workspace = true
name = "fusio-manifest"
repository.workspace = true
version.workspace = true

[features]
cache-moka = ["dep:moka"]
default = ["std", "tokio"]
std = []
tokio = ["fusio/executor-tokio", "fusio/tokio-http"]
web = ["fusio/opfs", "fusio/web-http"]

[dependencies]
async-stream = { version = "0.3" }
backon = "1.4"
bytes = { version = "1" }
fusio = { path = "../fusio", version = "0.4.1", default-features = false, features = [
    "aws",
    "dyn",
    "executor",
    "fs",
] }
fusio-core = { path = "../fusio-core", version = "0.4.1", features = ["std"] }
futures-channel = "0.3"
futures-util = { workspace = true }
moka = { version = "0.10", features = ["sync"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
thiserror = "2.0.17"
tracing = "0.1"

[dev-dependencies]
futures-executor = { version = "0.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
loom = "0.7"
proptest = "1"
rand = "0.8"
rstest = "0.21"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "step1_basic"
required-features = ["tokio"]

[[example]]
name = "step2_leases"
required-features = ["tokio"]

[[example]]
name = "step3_remote_compactor"
required-features = ["tokio"]

[[example]]
name = "step4_lease_keeper"
required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
