[package]
description = "Backend-agnostic, append-only manifest/WAL for Fusio (RFC-0001)."
edition.workspace = true
license.workspace = true
name = "fusio-manifest"
repository.workspace = true
version.workspace = true

[features]
cache-moka = ["dep:moka"]
default = ["std", "tokio"]
std = []
tokio = ["fusio/executor-tokio", "fusio/tokio-http"]
web = ["fusio/opfs", "fusio/web-http"]

[dependencies]
async-stream = { workspace = true }
backon = "1.4"
bytes = { workspace = true }
fusio.workspace = true
fusio.default-features = false
fusio.features = [
    "aws",
    "dyn",
    "executor",
    "fs",
]
fusio-core = { workspace = true, features = ["std"] }
futures-channel = { workspace = true }
futures-util = { workspace = true }
moka = { version = "0.10", features = ["sync"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.10" }
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
futures-executor = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
loom = "0.7"
proptest = "1"
rand = { workspace = true }
rstest = "0.21"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[[example]]
name = "step1_basic"
required-features = ["tokio"]

[[example]]
name = "step2_leases"
required-features = ["tokio"]

[[example]]
name = "step3_remote_compactor"
required-features = ["tokio"]

[[example]]
name = "step4_lease_keeper"
required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
