[package]
description = "the object_store integration of Fusio."
edition.workspace = true
license.workspace = true
name = "fusio-object-store"
repository.workspace = true
version.workspace = true

[dependencies]
async-stream = { version = "0.3" }
fusio = { version = "0.4.1", path = "../fusio", features = [
    "bytes",
    "dyn",
    "object_store",
    "tokio",
] }
futures-core = { workspace = true }
futures-util = { workspace = true }
object_store = { version = "0.12" }
parquet = { workspace = true, default-features = false, features = [
    "arrow",
    "async",
    "object_store",
] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
bytes = { workspace = true }
object_store = { version = "0.12", features = ["aws"] }
