[package]
description = "the object_store integration of Fusio."
edition.workspace = true
license.workspace = true
name = "fusio-object-store"
repository.workspace = true
version.workspace = true

[dependencies]
async-stream = { workspace = true }
fusio = { workspace = true, features = [
    "bytes",
    "dyn",
    "executor",
    "fs",
    "object_store",
    "tokio",
] }
futures-core = { workspace = true }
futures-util = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true, default-features = false, features = [
    "arrow",
    "async",
    "object_store",
] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
bytes = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
