[package]
description = "the Apache OpenDAL integration of Fusio."
edition.workspace = true
license.workspace = true
name = "fusio-opendal"
repository.workspace = true
version.workspace = true

[dependencies]
fusio = { version = "0.3.8", path = "../fusio", features = ["bytes"] }
futures-core = { workspace = true }
futures-util = { workspace = true }
opendal = { version = "0.50.1", default-features = false }
