[package]
description = "the Apache OpenDAL integration of Fusio."
edition.workspace = true
license.workspace = true
name = "fusio-opendal"
repository.workspace = true
version.workspace = true

[dependencies]
fusio = { workspace = true, features = ["bytes", "dyn", "executor", "fs"] }
futures-core = { workspace = true }
futures-util = { workspace = true }
opendal = { workspace = true }
