[package]
description = "Parquet reader and writer implementations for Fusio."
edition.workspace = true
license.workspace = true
name = "fusio-parquet"
repository.workspace = true
version.workspace = true

[features]
default = []
tokio = ["fusio/tokio"]
web = ["fusio/opfs"]
monoio = ["fusio/monoio", "dep:monoio"]
bench-tokio = ["dep:tokio"]

[[bench]]
harness = false
name = "common"
path = "../benches/parquet/common.rs"

[[bench]]
harness = false
name = "parquet_raw"
path = "../benches/parquet/parquet.rs"
required-features = ["tokio", "bench-tokio"]

[[bench]]
harness = false
name = "parquet_tokio"
path = "../benches/parquet/tokio.rs"
required-features = ["tokio", "bench-tokio"]

[[bench]]
harness = false
name = "parquet_monoio"
path = "../benches/parquet/monoio.rs"
required-features = ["monoio"]

[dependencies]
bytes = { workspace = true }
cfg-if = "1.0.0"
fusio = { version = "0.3.4", path = "../fusio", features = ["bytes", "dyn"] }
futures = { version = "0.3" }
monoio = { version = "0.2", optional = true, features = ["sync"] }
parquet = { version = "54", default-features = false, features = [
    "arrow",
    "async",
] }
tokio = { version = "1.40", optional = true, features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.45" }

[dev-dependencies]
arrow = "54"
rand = "0.8"
tempfile = "3.12.0"
tokio = { version = "1.40" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-test = "0.3.9"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
