[package]
description = "Parquet reader and writer implementations for Fusio."
edition.workspace = true
license.workspace = true
name = "fusio-parquet"
repository.workspace = true
version.workspace = true

[features]
bench = ["dep:monoio", "dep:tokio"]
default = []
monoio = ["dep:monoio", "fusio/monoio"]
tokio = ["fusio/tokio"]
tokio-uring = ["fusio/tokio-uring"]
executor-web = ["fusio/executor-web", "fusio/opfs"]
# Backward-compatible alias for the web executor path (previously tied to OPFS).
web = ["executor-web"]

[[bench]]
harness = false
name = "tokio"
path = "../benches/parquet/tokio.rs"
required-features = ["bench", "tokio"]

[[bench]]
harness = false
name = "monoio"
path = "../benches/parquet/monoio.rs"
required-features = ["bench", "monoio"]

[[bench]]
harness = false
name = "opendal"
path = "../benches/parquet/opendal.rs"
required-features = ["bench", "tokio"]

[dependencies]
bytes = { workspace = true }
cfg-if = { workspace = true }
fusio = { workspace = true, features = ["bytes", "dyn", "executor", "fs"] }
futures = { workspace = true }
monoio = { workspace = true, optional = true, features = ["sync"] }
parquet = { workspace = true, features = ["arrow", "async"] }
tokio = { workspace = true, optional = true, features = [
    "fs",
    "rt-multi-thread",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
