[package]
name = "parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", optional = true }
fusio = { path = "..", features = ["dyn"] }
bytes = { version = "1.7" }
tokio = { version = "1.40" }
parquet = { version = "53", features = ["arrow", "async"] }

[dev-dependencies]
tempfile = "3.12.0"

[lib]
path = "src/lib.rs"