[package]
name = "example-opfs"
edition.workspace = true
license.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
arrow = { workspace = true }
futures = { workspace = true }
parquet = { workspace = true, default-features = false, features = [
    "arrow",
    "async",
] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
fusio = { workspace = true, features = ["opfs"] }
fusio-parquet = { workspace = true, features = ["web"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
